--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 		<div class="banner">
 			<div class="h1">
 			<h1><strong class="h1">Welcome To Our Restaurant!</strong></h1>
+			<ul>
+				<p>My Hobbies</p>
+				<li>Gaming</li>
+				<li>Sleeping</li>
+			</ul>
 			</div>
 		</div>
 	</div>
